--- a/Students_Section/Resources(Study Material).html
+++ b/Students_Section/Resources(Study Material).html
@@ -144,7 +144,7 @@
 <div class="container2">
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Study_Material/6"> <img src="https://i.imgur.com/QqoThxZ.jpg" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Students_Section/Resources(Study%20Material)/Study_Material/6"> <img src="https://i.imgur.com/QqoThxZ.jpg" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong>6th Standard Books:</strong> Get 6th standard NCERT, ICSE and other helpful books of all subjects. 
 </p>
@@ -157,7 +157,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Study_Material/7"> <img src="https://i.imgur.com/pculhxJ.png" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Students_Section/Resources(Study%20Material)/Study_Material/7"> <img src="https://i.imgur.com/pculhxJ.png" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong>7th Standard Books:</strong> Get 7th standard NCERT, ICSE and other helpful books of all subjects. 
 </p>
@@ -172,7 +172,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Study_Material/8"> <img src="https://i.imgur.com/dnIm7oD.jpg" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Students_Section/Resources(Study%20Material)/Study_Material/8"> <img src="https://i.imgur.com/dnIm7oD.jpg" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong>8th Standard Books:</strong> Get 8th standard NCERT, ICSE and other helpful books of all subjects. 
 </p>
@@ -189,7 +189,7 @@
 <div class="container2">
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Study_Material/9"> <img src="https://i.imgur.com/hZpFWJ5.png" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Students_Section/Resources(Study%20Material)/Study_Material/9"> <img src="https://i.imgur.com/hZpFWJ5.png" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong>9th Standard Books:</strong> Get 9th standard NCERT, ICSE and other helpful books of all subjects. 
 </p>
@@ -206,7 +206,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Study_Material/10"> <img src="https://i.imgur.com/lZRvAqy.png" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Students_Section/Resources(Study%20Material)/Study_Material/10"> <img src="https://i.imgur.com/lZRvAqy.png" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong>10th Standard Books:</strong> Get 10th standard NCERT, ICSE and other helpful books of all subjects. 
 </p>
@@ -226,7 +226,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Study_Material/11"> <img src="https://i.imgur.com/F5xngi2.jpg" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Students_Section/Resources(Study%20Material)/Study_Material/11"> <img src="https://i.imgur.com/F5xngi2.jpg" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong>11th Standard Books:</strong> Get 11th standard NCERT, ICSE and other helpful books of all subjects. 
 </p>
@@ -241,7 +241,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Study_Material/12"> <img src="https://i.imgur.com/bcy29uN.jpg" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Students_Section/Resources(Study%20Material)/Study_Material/12"> <img src="https://i.imgur.com/bcy29uN.jpg" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong>12th Standard Books:</strong> Get 12th standard NCERT, ICSE and other helpful books of all subjects. 
 </p>
@@ -271,7 +271,7 @@
 
 
 <div class="item1">
-<a href="https://gsssbangana.github.io/Study_Material/NEET"> <img src="https://i.imgur.com/amMzdGC.jpg" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Students_Section/Resources(Study%20Material)/Study_Material/NEET"> <img src="https://i.imgur.com/amMzdGC.jpg" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong>NEET:</strong> National Eligibility Cum Enterance Test...  Get study material and PYQ's (previous year questions) for the preparation.
 </p>
@@ -281,7 +281,7 @@
 
 
 <div class="item1">
-<a href="https://gsssbangana.github.io/Study_Material/JEE"> <img src="https://i.imgur.com/leJioRS.jpg" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Students_Section/Resources(Study%20Material)/Study_Material/JEE"> <img src="https://i.imgur.com/leJioRS.jpg" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong>JEE:</strong> Joint Enterance Exam... Get study material and PYQ's (previous year questions) for the preparation.
 </p>
@@ -292,7 +292,7 @@
 
 
 <div class="item1">
-<a href="https://gsssbangana.github.io/Study_Material/CUET"> <img src="https://i.imgur.com/k68QPoa.png" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Students_Section/Resources(Study%20Material)/Study_Material/CUET"> <img src="https://i.imgur.com/k68QPoa.png" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong>CUET:</strong> Common University Enterance Test... Get study material and PYQ's (previous year questions) for the preparation.
 </p>
@@ -330,7 +330,7 @@
 <h2> <font color="Yellow">Some other good reads </font> </h2>
 <div class="container2">
 <div class="item1">
-<a href="https://gsssbangana.github.io/Study_Material/Science"> <img src="https://i.imgur.com/302vHq7.png" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Students_Section/Resources(Study%20Material)/Study_Material/Science"> <img src="https://i.imgur.com/302vHq7.png" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong> Science:</strong> Get science books written by pioneering scientists and prominent figures in their fields...
 </p>
