--- a/Features/Clubs.html
+++ b/Features/Clubs.html
@@ -131,7 +131,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Eco_Club"> <img src="https://i.imgur.com/x2tTbyT.jpg" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Features/Clubs/Eco_Club"> <img src="https://i.imgur.com/x2tTbyT.jpg" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong>Eco Club:</strong> Fostering a sense of responsibility for our planet in students and staff.
 </p>
@@ -149,7 +149,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Clubs/Road_Safety"> <img src="https://i.imgur.com/lgJPBrG.jpg" class="center"  style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Features/Clubs/Road_Safety"> <img src="https://i.imgur.com/lgJPBrG.jpg" class="center"  style="border-radius:15px">
 
 <p align="center"> 
 <strong>Road Safety Club:</strong> Fostering a sense of vigilance, responsibility, and awareness for safety.
@@ -167,7 +167,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Clubs/Anti-Drug_Abuse"> <img src="https://i.imgur.com/WoVOlTW.png" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Features/Clubs/Anti-Drug_Abuse"> <img src="https://i.imgur.com/WoVOlTW.png" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong>Anti-Drug Abuse Club:</strong> Fostering a sense of resilience and empowerment to create a community dedicated to a drug-free lifestyle
 </p>
@@ -183,7 +183,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Clubs/Disaster_Management"> <img src="https://i.imgur.com/iL0yHBN.jpg" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Features/Clubs/Disaster_Management"> <img src="https://i.imgur.com/iL0yHBN.jpg" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong>Disaster Management Club:</strong> Fostering a sense of resilience and empowerment to create a community prepared for and capable of effective disaster management.
 </p>
@@ -198,7 +198,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Clubs/Anti-SHC"> <img src="https://i.imgur.com/xhEiEZi.jpg" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Features/Clubs/Anti-SHC"> <img src="https://i.imgur.com/xhEiEZi.jpg" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong>Anti-Sexual Harassment Committee:</strong> Fostering a sense of awareness, empathy, and accountability to create a safe and inclusive environment.
 </p>
@@ -213,7 +213,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Clubs/Red_Cross"> <img src="https://i.imgur.com/OzYr80p.png" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Features/Clubs/Red_Cross"> <img src="https://i.imgur.com/OzYr80p.png" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong>Red Cross Club:</strong> Fostering a culture of humanitarianism and community service to cultivate a compassionate and responsive environment.
 <br>
@@ -227,7 +227,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Clubs/ELC"> <img src="https://i.imgur.com/O4Y7FKp.png" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Features/Clubs/ELC"> <img src="https://i.imgur.com/O4Y7FKp.png" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong> Electoral Literacy Club:</strong> Fostering a sense of civic responsibility and awareness to create a informed and active participation in the democratic process.
 </p>
@@ -241,7 +241,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Clubs/Sports_Club"> <img src="https://i.imgur.com/22Etp9W.png" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Features/Clubs/Sports_Club"> <img src="https://i.imgur.com/22Etp9W.png" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong> Sports Club:</strong> Fostering a sense of teamwork, discipline, and sportsmanship to create a dynamic and inclusive Sports Club for enthusiasts of all levels.
 </p>
@@ -255,7 +255,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Clubs/MDM"> <img src="https://i.imgur.com/4ShTGkq.jpg" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Features/Clubs/MDM"> <img src="https://i.imgur.com/4ShTGkq.jpg" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong> Mid-Day Meal:</strong> Fostering a sense of nutrition and community support to create a Mid-Day Meal initiative to ensure every child has access to a nourishing meal.
 </p>
@@ -283,7 +283,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Clubs/NSS"> <img src="https://i.imgur.com/26qBJQO.jpg" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Features/Clubs/NSS"> <img src="https://i.imgur.com/26qBJQO.jpg" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong> National Service Scheme:</strong> Fostering a sense of social responsibility and community service within our NSS, working towards positive change.
 </p>
@@ -298,7 +298,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Clubs/NCC"> <img src="https://i.imgur.com/ymVMuFC.png" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Features/Clubs/NCC"> <img src="https://i.imgur.com/ymVMuFC.png" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong> National Cadet Corps:</strong> Fostering a sense of discipline and patriotism to create responsible citizens within our NCC unit.
 </p>
@@ -314,7 +314,7 @@
 
 <div class="item1">
 
-<a href="https://gsssbangana.github.io/Clubs/Scout&Guide"> <img src="https://i.imgur.com/fZB8cFA.jpg" class="center" style="border-radius:15px">
+<a href="https://gsssbangana.github.io/Features/Clubs/Scout&Guide"> <img src="https://i.imgur.com/fZB8cFA.jpg" class="center" style="border-radius:15px">
 <p align="center"> 
 <strong> Scout And Guide:</strong> Fostering a sense of preparedness and character development within our Scout and Guide community.
 </p>
