--- a/Students_Section/Creative_Corner.html
+++ b/Students_Section/Creative_Corner.html
@@ -150,7 +150,7 @@ In this chain of events student was awarded a certificate!
 <kr>
 <h2> Our Gems... </h2>
 
-<table class="center">
+<table >
 <thead>
 <th colspan="1"> Title</th>
 <th colspan="1"> Session
