--- a/Features/Syllabus.html
+++ b/Features/Syllabus.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -345,6 +344,6 @@
 
 <br>
 <footer>
-<p align="center"> This website is managed by a student. <a href="https:divyanshushares.github.io">Click here</a> to know more.
+<p align="center"> This website is managed by a student. <a href="https://gsssbangana.github.io/Web_Management">Click here</a> to know more.
 </footer>
 
